# json_parser_rust

./: .gitattributes  .gitignore  Cargo.toml  profile_cli_macos.sh  vbaCode.bas
cli/: Cargo.toml
cli/src/: main.rs
json_parser/: Cargo.toml
json_parser/src/: ast.rs  error.rs  lib.rs  parser.rs  token.rs
json_parser/src/snapshots/: json_parser__parser__tests__parse_invalid_number.snap  json_parser__parser__tests__parse_invalid_octal.snap  json_parser__parser__tests__parse_invalid_utf8.snap  json_parser__parser__tests__parse_test_data@apache_builds.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000000.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000001.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000002.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000003.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000004.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000005.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000006.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000007.json.snap  json_parser__parser__tests__parse_test_data@crash__crash000008.json.snap  (+139 more)
json_parser_cli/: Cargo.toml
json_parser_cli/src/: main.rs
lexer/src/: ast.rs  error.rs  lib.rs  parser.rs  token.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lib.rs  token.rs
src/: lib.rs  parser.rs  wide.rs
test_data/: event_stacktrace_10kb.json  mesh.json
test_data/fail/: fail48.json
(+222 files in other folders)
