[workspace]
members = ["json_parser", "json_parser_cli"]

[package]
name = "json_parser_rust"
version = "0.1.0"
edition = "2021"

# [build]
# target = "x86_64-pc-windows-msvc"

[dependencies]
bumpalo = { version = "3.16.0", features = ["collections"] }
json_parser = { path = "./json_parser" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = 'fat'

