[workspace]
members = ["parser", "cli"]

[package]
name = "json_parser_rust"
version = "0.1.0"
edition = "2024"

[build]
target = "x86_64-pc-windows-msvc"

[dependencies]
bumpalo = { version = "3.16.0", features = ["collections"] }
parser = { path = "./parser" }

[workspace.dependencies]
insta = { version = "1.42.0", features = ["glob"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = 'fat'
strip = true

